--- a/MyFirstApp/Views/Home/About.cshtml
+++ b/MyFirstApp/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Esta area es para insertar informacion adicional.</p>
